# espressif_projects

./: .gitignore  README
Indus/: Makefile  Protocol_Design_Document.txt  sdkconfig
Indus/main/: icom_ipc.c  icom_modbus_task.c  icom_timer_api.c  icom_wifi.c  main_task.c  modbus-rtu.c  modbus-tcp.c  modbus.c  platform_task.c  serial_task.c
Indus/main/include/: icom_ble_protocol.h  icom_config.h  icom_modbus.h  icom_task.h
MobiSmartDT/: CMakeLists.txt
MobiSmartDT/ble_ccu/: sdkconfig.old
MobiSmartDT/ble_ccu/main/: main.c  (+4 more)
MobiSmartDT/ble_esp/: README.md
MobiSmartDT/main/: CMakeLists.txt  bt_app_core.c  msdt_api.c
akbi/: akbi_bt_msg.h  akbi_msg.h  ble_apis.c
akbi/ble_ccu/: README.md  partitions.csv  sdkconfig  sdkconfig.old
akbi/ble_ccu/main/: CMakeLists.txt  akbi_bt_msg.h  akbi_ccu_api.c  akbi_ccu_api.h  akbi_ccu_msg_handler.c  akbi_ccu_msg_handler.h  akbi_esp_update.c  akbi_esp_update.h  akbi_fsm.c  akbi_fsm.h  akbi_msg.h  akbi_serial_task.c  akbi_serial_task.h  ble_apis.c  ble_apis.h  bt_app_core.c  main.c  uart_async_rxtxtasks_main.c  uart_async_rxtxtasks_main.h
ble_modbus_bridge/: CMakeLists.txt  sdkconfig  sdkconfig.old
ble_modbus_bridge/main/: CMakeLists.txt  ble_task.c  bt_app_core.c  icom_ble_protocol.c  icom_bt.c  icom_cloud_task.c  icom_config_storage.c  icom_gpio.c  icom_gpio.h  icom_ipc.c  icom_mobdus.h  icom_modbus.h  icom_modbus_task.c  icom_mqtt.c  icom_timer_api.c  icom_wifi.c  ifcmgr_task.c  main.c  main_task.c  modbus-data.c  modbus-rtu-private.h  modbus-rtu.c  modbus.c  modbus_types.h  peripheral.h  serial_port.c  serial_port.h
(+18 files in other folders)
